Change Bulma to Bootstrap Framework

--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,8 +1,33 @@
-<footer class="footer">
-  <div class="content has-text-centered">
-    <p>
-      <strong>Todolizer</strong> by <a href="https://github.com/casusarts">Fio Go</a>. The source code is licensed
-      <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
-    </p>
+<footer class="pt-4 my-md-5 pt-md-5 border-top">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md">
+        <img src="#" alt="" class="mb-2">
+        <small class="d-block mb-3 text-muted">This is test</small>
+      </div>
+      <div class="col-6 col-md">
+        <h5>App</h5>
+        <ul class="list-unstyled text-small">
+          <li>One</li>
+          <li>Two</li>
+          <li>Three</li>
+        </ul>
+      </div>
+      <div class="col-6 col-md">
+        <h5>Author</h5>
+        <ul class="list-unstyled text-small">
+          <li>One</li>
+          <li>Two</li>
+          <li>Three</li>
+        </ul></div>
+      <div class="col-6 col-md">
+        <h5>About</h5>
+        <ul class="list-unstyled text-small">
+          <li>One</li>
+          <li>Two</li>
+          <li>Three</li>
+        </ul>
+      </div>
+    </div>
   </div>
 </footer>
